methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: not found: value &&
def isFacingTrail():Boolean = {var col:Color = getCouleurSol(); while (col==vert) && !(estSurBiscuit) 
                                                                                  ^SlugTracking:5: error: too many arguments for method estSurBiscuit: ()Boolean
                                      {var test:Boolean = estFaceMur(); if (!test) {avance();}
                                      ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
def isFacingTrail():Boolean = {var col:Color = getCouleurSol(); while (col==vert) && !(estSurBiscuit) 
                                                                ^